# Fog-of-World-Data-Parser

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  test_parser.py
.github/workflows/: publish.yml
src/fog_of_world_data_parser/: __init__.py  parser.py
tests/: test_parser.py
