[project]
name = "fog-of-world-data-parser"
version = "0.1.5"
description = "A data parser for the internal syncing data format used by Fog of World"
authors = [
    { name = "Zed (Zijun) Chen", email = "zed@zijun.dev" },
    { name = "Ming", email = "pypi-fogdp@myli.page" }
]
readme = "README.md"
license-files = [ "LICENSE" ]
requires-python = ">=3.13"
keywords = ["fog-of-world", "data-parser", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
]

[project.urls]
Homepage = "https://github.com/tslmy/Fog-of-World-Data-Parser"
Repository = "https://github.com/tslmy/Fog-of-World-Data-Parser"
Issues = "https://github.com/tslmy/Fog-of-World-Data-Parser/issues"

[dependency-groups]
dev = [
    "autopep8==1.5.7",
    "coverage-badge>=1.1.2",
    "pycodestyle==2.7.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fog_of_world_data_parser"]

[tool.uv]
package = true
